--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ img {
 
 .name-highlight {
   text-align: center;
-  margin-bottom: 8px;
+  margin-bottom: 72px;
 }
 
 .icon {
@@ -548,14 +548,14 @@ img {
 }
 
 .customers-link {
-  width: 100%;
-  height: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--light-grey);
+  width: 100%;
+  height: 100%;
 }
 
 .customers-link:hover,
@@ -633,10 +633,11 @@ img {
   justify-content: center;
 }
 
-.icon-link:hover {
+.icon-link:hover,
+.icon-link:focus {
   background-color: #404bbf;
 }
 
 .icon-logo {
-  color: var(--cloud);
+  fill: var(--cloud);
 }
