--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   max-width: 1440px;
-  margin-top: 9px;
+  margin: auto;
 }
 
 .descriptions-div {
